:wrench: [ProductCategory][ImagesList] fix overflow to avoid appearing from within a container

--- a/src/styles/image-list.scss
+++ b/src/styles/image-list.scss
@@ -1,6 +1,10 @@
 .imagelist-root {
     padding-top: 85px;
 
+    @include breakpoint-max($bp-small) {
+        overflow: hidden;
+    }
+
     .imagelist__slider {
         width: 100%;
         margin-left: auto;
@@ -18,10 +22,6 @@
 
     .imagelist__main__viewport {
         width: 100%;
-
-        @include breakpoint-max($bp-small) {
-            overflow: hidden;
-        }
     }
 
     .imagelist__items-container {
@@ -48,6 +48,7 @@
         text-align: left;
         flex-shrink: 0;
         width: calc(100% / 1.1);
+        padding-bottom: 30px;
         cursor: pointer;
 
         &:not(:last-of-type) {
@@ -56,6 +57,7 @@
 
         @include breakpoint-min($bp-medium) {
             width: calc(100% / 3.1);
+            padding-bottom: 0;
 
             &:not(:last-of-type) {
                 margin-right: 26px;
